fix alignment issue on saved outfits clickable

--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -93,6 +93,7 @@ body{
     padding: 15px 0px 10px 0px;
     text-decoration: none;
     color: #ffffff;
+    text-align: center;
     margin-left: 25px;
     margin-right: 25px;
     width: 100px;
